--- a/ig.ini
+++ b/ig.ini
@@ -2,7 +2,7 @@
 # ini file for the Implementation Guide publisher
 # see comments below for instructions
 
-ig = fsh-generated/resources/ImplementationGuide-ihe-fhir-pharm-medicationrecord.json
+ig = fsh-generated/resources/ImplementationGuide-ihe.pharm.meow.json
 template = ihe.fhir.template
 
 
