--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -58,8 +58,8 @@ parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+
 # │  The pages property corresponds to IG.definition.page.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 pages:
-  index.xml:
-    title: "MEOW Home"
+  index.md:
+    title: "MeOw Home"
   1330_overview.md:
     title: "1:33.0 Overview"
   functional-updates.md:
@@ -85,8 +85,6 @@ pages:
 #    title: "2:3.67 Find Document References [ITI-67]"
 #  ITI-68.md:
 #    title: "2:3.68 Retrieve Document [ITI-68]"
-  31_xds.md:
-    title: "3:4.2.4.1 Error Codes"
   32_fhir_maps.md:
     title: "3:4.5 FHIR Maps"
   testplan.md:
