--- a/ig.ini
+++ b/ig.ini
@@ -13,7 +13,7 @@ template = ihe.fhir.template
 ##########################
 
 #   ig: the name of the implementation guide resource file.
-examples:
+# examples:
 # ig = input/myig.xml
 # ig = input/implementationguide-example2.xml
 
