--- a/ig.ini
+++ b/ig.ini
@@ -3,7 +3,7 @@
 # see comments below for instructions
 
 ig = fsh-generated/resources/ImplementationGuide-ihe.pharm.meow.json
-template = ihe.fhir.template
+template = ihe.fhir.template#current
 
 
 
