--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,14 +5,14 @@
 # 2021-06-18: publish default branches to / , other branches branches/<branch>
 # 2021-11-26: reusable workflow
 
-name: CI
+name: ghbuild
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events for any main branch
   push:
     branches-ignore:    
-      - gh-pages
+      - 'gh-pages'
   pull_request:
 
   workflow_dispatch:
@@ -20,4 +20,4 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   call_build: 
-    uses: openhie/empty-fhir-ig/.github/workflows/main.yml@master
+    uses: WorldHealthOrganization/smart-base/.github/workflows/ghbuild.yml@main
