--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -91,6 +91,8 @@ pages:
     title: "3:4.5 FHIR Maps"
   testplan.md:
     title: "Test Plan"
+  issues.md:
+    title: "Issues"
 #    extension: 
 #      - url: http://hl7.org/fhir/StructureDefinition/structuredefinition-standards-status
 #        valueCode: informative
