--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -61,43 +61,32 @@ parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+
 pages:
   index.md:
     title: "MeOw Home"
-
-
   volume1.md:
     title: "Volume 1 Overview"
 
     usecases.md:
       title: "Use Case overview"
-      usecase-1.md:
-        title: "Use Case 1 - ..."
+    usecase-1.md:
+      title: "Use Case 1 - ..."
 
-    overview.md:
-      title: "Overview: data exchange for supply"
-    actors-transactions.md:
-      title: "Actors and Transactions overview"
-    actor_options.md:
-      title: "Actor Options"
-    actor_required_grouping.md:
-      title: "Actor Required Grouping"
-    security_considerations.md:
-      title: "Security Considerations"
-    cross_profile_considerations.md:
-      title: "Cross Profile Considerations"
+    glossary.md:
+      title: "Glossary"
+    medication_concepts.md:
+      title: "Medication Concepts"
+    medication_treatment_lifecycle.md:
+      title: "Medication Treatment Lifecycle"
+    aggregation_and_medication_reconcilliation.md:
+      title: "Aggregation and Medication Reconcilliation"
+    data_models.md:
+      title: "Data Models"
+   # cross_profile_considerations.md:
+   #   title: "Cross Profile Considerations"
   volume2.md:
     title:"Volume 2: Transactions"
     transactions.md:
       title: "Transaction Definitions"
       PHARM-O1.md:
         title: "TBD"
-
-
-
-
-
-
-
-
-
 
   PHARM-x.md:
     title: "PHARM xxx"
@@ -109,10 +98,10 @@ pages:
 #    title: "2:3.67 Find Document References [ITI-67]"
 #  ITI-68.md:
 #    title: "2:3.68 Retrieve Document [ITI-68]"
-  32_fhir_maps.md:
-    title: "3:4.5 FHIR Maps"
-  testplan.md:
-    title: "Test Plan"
+#  32_fhir_maps.md:
+#    title: "3:4.5 FHIR Maps"
+#  testplan.md:
+#    title: "Test Plan"
   issues.md:
     title: "Issues"
 #    extension: 
@@ -131,11 +120,19 @@ pages:
 menu:
   MEOw Home: index.html
   Volume 1: 
-    "Actors and Transactions": actors-transactions.html
-    "Actor Options": actor_options.html
+    "Volume 1 Overview": volume1.html
+    "Glossary": glossary.html
+    "Use Case Overview": usecases.html
+    "Medication Concepts": medication_concepts.html
+    "Medication Treatment Lifecycle": medication_treatment_lifecycle.html
+    "Aggregation and Medication Reconcilliation": aggregation_and_medication_reconcilliation.html
+    "Data Models": data_models.html
+
+   # "Actors and Transactions": actors-transactions.html
+   # "Actor Options": actor_options.html
    # "Actor Required Grouping": 1333_required_grouping.html
-    "Security Considerations": security_considerations.html
-    "Cross Profile Considerations": cross_profile_considerations.html
+   # "Security Considerations": security_considerations.html
+   # "Cross Profile Considerations": cross_profile_considerations.html
 
   Volume 2:
     "Transaction O1": PHARM-O1.html
