--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -29,7 +29,7 @@ license: CC-BY-4.0
 jurisdiction: 'http://unstats.un.org/unsd/methods/m49/m49.htm#001'
 dependencies:
   ihe.domain.logical-datatypes: current
-
+  ihe.pharm.mpd: current
  
 parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+Parameters
   path-resource:
